TP3/3- Magazin/legume-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legume-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: legume
  template:
    metadata:
      labels:
        app: legume
    spec:
      containers:
      - name: legume-container
        image: antssy17/legume
        ports:
        - containerPort: 80
