TP3/3- Magazin/monbonlait-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monbonlait-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monbonlait
  template:
    metadata:
      labels:
        app: monbonlait
    spec:
      containers:
      - name: monbonlait-container
        image: antssy17/monbonlait
        ports:
        - containerPort: 80
