TP3/3- Magazin/legumbio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legumebio-service
spec:
  selector:
    app: legumebio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
