TP3/3- Magazin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
spec:
  rules:
    - host: monbonlait.fr
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: monbonlait-service
              port:
                number: 80
    - host: mesbonslegumes.fr
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: legume-service
              port:
                number: 80
    - host: mesbonslegumes.fr/bio
      http:
        paths:
        - pathType: Prefix
          path: "/bio"
          backend:
            service:
              name: legumebio-service
              port:
                number: 80
